Fix overflow for long descriptions

--- a/product-listing-page/src/components/main/products/Card.module.css
+++ b/product-listing-page/src/components/main/products/Card.module.css
@@ -28,7 +28,8 @@ h2 {
 .desc {
   margin-bottom: 5px;
   font-size: 18px;
-  height: 100px;
+  height: 80px;
+  overflow: hidden;
 }
 
 .price {
